--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "babel-core": "6.14.0",
+    "babel-core": "^6.26.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^4.13.6",
     "node-geocoder": "^3.22.0",
     "password-hash": "^1.2.2",
-    "universal-cookie": "^2.1.2"
+    "universal-cookie": "^3.1.0"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
